compiler/tools/fpp-check/test/invalid_symbols/module_as_component.fpp
module M {

  instance c: M base id 0x100

}
